     resulted in error. `by=FALSE` is removed from help and duplicated returns an error when by=TRUE/FALSE now. 
     Closes #5424.
     
  o  More info about distinguishing small numbers from 0.0 from v1.9.2+ here :
       http://stackoverflow.com/questions/22290544/grouping-very-small-numbers-e-g-1e-28-and-0-0-in-data-table-v1-8-10-vs-v1-9-2

        **********************************************
        **                                          **
        **   CHANGES IN DATA.TABLE VERSION 1.9.2    **
        **                                          **
        **          On CRAN 27 Feb 2014             **
        **                                          **
        **********************************************

NEW FEATURES

  o  Fast methods of reshape2's melt and dcast have been implemented for data.table, FR#2627.
     Most settings are identical to reshape2, see ?melt.data.table.
	 melt: 10 million rows and 5 columns, 61.3 seconds reduced to 1.2 seconds.
	 dcast: 1 million rows and 4 columns, 192 seconds reduced to 3.6 seconds.
     * melt.data.table is also capable of melting on columns of type 'list'.
     * melt.data.table gains 'variable.factor' and 'value.factor' which by default are TRUE and FALSE respectively
       for compatibility with reshape2. This allows for directly controlling the output type of "variable"
       and "value" columns (as factors or not).
     * melt.data.table's 'na.rm = TRUE' parameter is optimised to remove NAs directly during melt and therefore
       avoids the overhead of subsetting using "!is.na" afterwards on the molten data.
     * except for "margins" argument from `reshape2:::dcast`, all features of dcast are intact. 
       dcast.data.table can also accept 'value.var' columns of type list
     Reminder of Cologne (Dec 2013) presentation slide 32 : "Why not submit a [dcast] pull request to reshape2" :
       http://datatable.r-forge.r-project.org/CologneR_2013.pdf
  